out/old/manifests/passbolt/StatefulSet.passbolt-client.yaml
metadata:
  name: passbolt-client
  namespace: passbolt
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passbolt-client
  template:
    metadata:
      labels:
        app: passbolt-client
    spec:
      containers:
      - name: passbolt-client
        image: <COMPANY>-<DOMAIN_607>/passbolt/passbolt-client:v2
        ports:
        - name: passbolt-client
          containerPort: 3306
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: registrypullsecret
      schedulerName: default-scheduler
  serviceName: passbolt-client
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
