out/old/manifests/passbolt/StatefulSet.passbolt.yaml
metadata:
  name: passbolt
  namespace: passbolt
  labels:
    app: passbolt
    app.kubernetes.io/instance: passbolt-prd
  annotations:
    cattle.io/timestamp: '2023-02-21T01:41:13Z'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passbolt
  template:
    metadata:
      labels:
        app: passbolt
    spec:
      containers:
      - name: passbolt
        image: <COMPANY>-<DOMAIN_607>/passbolt/passbolt_v2_12:20200709
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: passbolt-pv
          mountPath: /var/www/passbolt/webroot/img/public
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: registrypullsecret
      schedulerName: default-scheduler
  volumeClaimTemplates:
  - kind: PersistentVolumeClaim
    apiVersion: v1
    metadata:
      name: passbolt-pv
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: ceph-block-replica-2
      volumeMode: Filesystem
  serviceName: passbolt
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
